@@ -244,7 +244,7 @@ lwgeom_node(const LWGEOM* lwgeom_in)
 	lwgeom_free(ep);
 	lwcollection_free(col);
 
-	lines->srid = lwgeom_in->srid;
+	lwgeom_set_srid(lines, lwgeom_in->srid);
 	return (LWGEOM*)lines;
 }
 
