@@ -1,4 +1,4 @@
-ERROR:  ST_OffsetCurve only works with LineStrings
+ERROR:  lwgeom_offsetcurve: input is not linear
 t0|SRID=42;LINESTRING(0 0,10 0)
 t1|SRID=42;LINESTRING(0 10,10 10)
 t2|SRID=42;LINESTRING(10 -10,0 -10)
@@ -16,3 +16,5 @@ t11|LINESTRING(37.6 39.2,39.2 36.6,42 35.8,43 34.8,46.4 33.6,48.2 30,48.8 30,50.
 t12|LINESTRING(57.4 31,53.4 30.2,51.2 26,45.8 26,43.6 30.4,41 31.2,40 32.2,36.8 33.4,34.4 36.8)
 t13|LINESTRING(-2 0,-2 22,12 22,12 8,2 8)
 t14|MULTILINESTRING((2 12,8 12,8 18,2 18,2 12),(2 8,2 0))
+t15|MULTILINESTRING((2 12,8 12,8 18,2 18,2 12),(2 8,2 0),(4 12,10 12,10 18,4 18,4 12),(4 8,4 0),(5 12,11 12,11 18,5 18,5 12),(5 8,5 0))
+#2508|t
