@@ -37,10 +37,11 @@ PostGIS 2.5.0
   - #3977, ST_ClusterKMeans is now faster and simpler (Darafei Praliaskouski)
   - #3982, ST_AsEncodedPolyline supports LINESTRING EMPTY and MULTIPOINT EMPTY
            (Darafei Praliaskouski)
-  - #3986, ST_AsText now has second argument to limit decimal digits 
+  - #3986, ST_AsText now has second argument to limit decimal digits
            (Marc Ducobu, Darafei Praliaskouski)
   - #4020, Casting from box3d to geometry now returns correctly connected
            PolyhedralSurface (Matthias Bay)
+  - #2508, ST_OffsetCurve now works with collections (Darafei Praliaskouski)
 
 PostGIS 2.4.0
 2017/09/30
